cluster/apps/jellyfin/jellyfin-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: apps
spec:
  revisionHistoryLimit: 2
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:latest
          ports:
            - containerPort: 8096
              name: http
            - containerPort: 8920
              name: https
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: 2000m
              memory: 4Gi
          livenessProbe:
            httpGet:
              path: /System/Ping
              port: 8096
            initialDelaySeconds: 60
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /System/Ping
              port: 8096
            initialDelaySeconds: 60
            periodSeconds: 10
          volumeMounts:
            - name: movies
              mountPath: /media/movies
            - name: series
              mountPath: /media/series
            - name: data
              mountPath: /config
              subPath: config
            - name: data
              mountPath: /cache
              subPath: cache
      volumes:
        - name: movies
          hostPath:
            path: /data/storage/files/media/movies
            type: Directory
        - name: series
          hostPath:
            path: /data/storage/files/media/series
            type: Directory
        - name: data
          persistentVolumeClaim:
            claimName: jellyfin-data
