cluster/apps/jellyfin/jellyfin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: apps
spec:
  selector:
    app: jellyfin
  ports:
    - name: http
      port: 80
      targetPort: 8096
    - name: https
      port: 443
      targetPort: 8920
